--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ compiler:
   - gcc
 before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository --yes ppa:fkrull/deadsnakes
   - sudo apt-get -qq update
 install:
   - sudo apt-get -qq install rake openjdk-7-jdk autotools-dev libltdl-dev libtool autoconf autopoint libboost-all-dev
   - sudo apt-get -qq install genromfs zfs-fuse autoconf ant libffi-dev ruby bison gyp git build-essential
   - sudo apt-get -qq install qemu-utils qemu-kvm bridge-utils libvirt0 libvirt-bin
   - sudo apt-get -qq install g++-4.8
+  - sudo apt-get -qq install python2.6 python2.6-dev
   - cd ../
   - mkdir libuv
   - cd libuv
