--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-language: python
-python:
-  - "2.5"
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
+language: c++
+compiler:
+  - clang
 before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
