--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: c++
-compiler:
-  - clang
+language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "2.8"
+  - "3.2"
+  - "3.3"
 before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
