--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: cpp
-compiler:
-  - gcc
+language: python
+python:
+  - "2.5"
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
 before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
